--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*>*{
+ font-family: "Poppins", sans-serif;
+}
+body{
+    background:#dcdce6 ;
+    background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&w=1600');
+    background-size: cover;
+}
